--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,9 +10,7 @@ img {
   max-width: 100%; }
 
 .wrapper {
-  max-width: 300px;
-  width: 100%;
-  padding: 3px; }
+  width: 100%; }
 
 .cf:after {
   content: "";
@@ -23,4 +21,13 @@ img {
   html {
     background: #ffd500; }
   h1 {
-    display: none; } }
+    display: none; }
+  .wrap {
+    width: 100%;
+    padding: 3%; }
+  .wrap li {
+    width: 19%;
+    float: left;
+    margin-left: 1%;
+    list-style-type: none;
+    border: 2px solid #fff; } }
