--- a/styles/_project-styles.scss
+++ b/styles/_project-styles.scss
@@ -1,30 +1,22 @@
-@media (max-width: 415px) {
-	html {
-		background: $mobile;
-	}	
-	h1 {
+.wrapper {
+	max-width: 415px;
+	display: block;
+	margin: 0 auto;
+	background: $mobile;
+}
+html {
+	background: $mobile;
+}	
+
+.wrap {
+	width: $width;
+	padding: $p;
+	margin: $m auto;
+	border: $b-white;
+	&.step {
 		display: none;
 	}
-
-	button {
-		width: 80%;
-		display: block;
-		margin: $m auto;
-	}
-	.wrap {
-		display: none;
-		width: 100%;
-		padding: $p;
-		&.step1 li {
-			width: (100% - 5) / 5;
-		}
-
-		li {
-			
-			float: left;
-			margin-left: 1%;
-			list-style-type: none;
-			border: $b-white;
-		}
+	.step:first-of-type {
+		display: inline-block;
 	}
 }
