--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,5 +35,10 @@ html {
 .wrap.step {
   display: none; }
 
-.wrap .step:first-of-type {
-  display: inline-block; }
+.wrap.step.step0 {
+  display: block; }
+
+button.next {
+  width: 85%;
+  display: block;
+  margin: 0 auto; }
