--- a/styles/_var.scss
+++ b/styles/_var.scss
@@ -1,5 +1,6 @@
 $body: 'Open Sans', Arial, sans-serif;
-$hed: "Raleway", Georgia;
+$hed: "Poppins", Georgia;
+
 
 $lg: #999;
 $g: #a1a1a1;
@@ -8,19 +9,21 @@ $dg: #333;
 $w: #fff;
 
 
-$c: #16a085;
+$c: #F1C40F;
+$c-2: #2980B9;
 
 
 $b: 2px solid $lg;
-$b-white: 2px solid $w;
+$b-white: 3px solid $w;
 $tb: 2px solid tomato;
 
 
 $p: 3%;
 $m: 10px;
+$sm: 5px;
 
 $fw-reg: 400;
-$fw-bold:  600;
+$fw-bold:  700;
 
 $mobile: #ffd500;
 
