--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,27 +18,51 @@ img {
   clear: both; }
 
 .wrapper {
-  max-width: 415px;
   display: block;
   margin: 0 auto;
-  background: #ffd500; }
+  padding: 3%; }
 
 html {
-  background: #ffd500; }
+  background: #F1C40F; }
 
-.wrap {
-  width: 85%;
-  padding: 3%;
-  margin: 10px auto;
-  border: 2px solid #fff; }
-
-.wrap.step {
+.pop-up {
   display: none; }
 
-.wrap.step.step0 {
+.wrap {
+  padding: 3%;
+  margin: 10px auto;
+  display: none; }
+
+.wrap.step1 {
   display: block; }
 
-button.next {
-  width: 85%;
-  display: block;
-  margin: 0 auto; }
+.option {
+  display: none; }
+
+.option:nth-of-type(1) {
+  display: block; }
+
+h2 {
+  color: #a1a1a1;
+  font-size: 60px;
+  font-family: "Poppins", Georgia;
+  line-height: 1.25; }
+
+h2 span {
+  color: #fff; }
+
+h3 {
+  color: #fff;
+  letter-spacing: 3px;
+  margin-bottom: 10px; }
+
+button {
+  width: 30%;
+  padding: 10px 5px;
+  border-radius: 35px;
+  background: #F1C40F;
+  color: #fff;
+  font-size: 36px;
+  font-weight: 700;
+  border: 3px solid #fff;
+  margin: 3% 0; }
