--- a/styles/_var.scss
+++ b/styles/_var.scss
@@ -10,11 +10,12 @@ $w: #fff;
 
 
 $c: #F1C40F;
-$c-2: #2980B9;
-
+$c2: #2980B9;
+$c3: #9B59B6;
+$c4: #8E44AD;
 
 $b: 2px solid $lg;
-$b-white: 3px solid $w;
+$b-white: 2px solid $w;
 $tb: 2px solid tomato;
 
 
