--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,9 @@ h3 {
 
 .step0 {
   display: inline-block;
-  background: #8E44AD; }
+  background: #8E44AD;
+  width: 100%;
+  height: 100vh; }
 
 .step1 {
   background: #F1C40F; }
@@ -101,6 +103,19 @@ h3 {
   position: absolute;
   right: 3%;
   bottom: 3%; }
+
+.first-screen {
+  background: #34495E;
+  width: 100%;
+  height: 100vh;
+  padding: 3%; }
+
+.first-screen button {
+  width: 225px;
+  display: block;
+  margin: 10px 0;
+  padding: 20px 0;
+  background: #34495E; }
 
 .something-else .bttn-wrap button {
   width: 220px; }
