--- a/styles/_project-styles.scss
+++ b/styles/_project-styles.scss
@@ -140,3 +140,10 @@ button.yes {
 .letter {
     color: rgba(255, 255, 255, 1);
 }
+
+.mb-wrapper {
+	background: #C0392B;
+}
+.mb {
+	display: none;
+}
